--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header class="header ">
       <div class="header-inner">
         <h1 class="header-logo">
-          <a href=".">TARO DESIGN</a>
+          <a href=".">Home</a>
         </h1>
         <nav class="header-nav">
           <ul class="header-nav-list">
@@ -45,12 +45,14 @@
       <!-- split -->
       <div class="split">
         <div class="split-body">
-          <p class="split-title">TARO<br>YAMADA</p>
+          <p class="split-title">荒瀬勇太</p>
           <p class="split-text">
-            ユーザーとお客様が心から満足できるサイトをお作りいたします。<br>
-            デザインとコーディングはおまかせください。<br>
-            福島県郡山市在住。猫と暮らしています。<br>
-            ２年間Web制作会社に勤務後、フリーランスとして独立しました。
+              やった人がクスっとでも笑えたら良いゲームを制作しています。<br>
+              もちろん苦しみながらPlayしている所も見れるようなゲームも制作しています。<br>
+              福岡県福岡市博多区在住<br>
+              専門学校九州デザイナー学院ゲームクリエイター学科ゲームプログラム専攻所属<br>
+              プログラミングを体験してから今年で3年目になります。<br>
+              現在は、主にC#,C++,Javaを学習しています。<br>
           </p>
         </div>
         <div class="split-img"></div>
@@ -62,9 +64,9 @@
         <div class="inner">
           <h2 class="title">WORKS</h2>
           <div class="works-list">
-            <a class="works-item" href="works-template.html">
-              <p class="works-img"><img src="img/works-sample-thumb.jpg" alt="" /></p>
-              <p class="works-name">作品名が入る</p>
+            <a class="works-item" href="https://yutaarase.github.io/uniry_run/">
+              <p class="works-img"><img src="img/test2.png" alt="" /></p>
+              <p class="works-name">RUN!!</p>
               <p class="works-info">Design / Coding(Responsive)</p>
             </a>
             <a class="works-item" href="works-template.html">
@@ -100,49 +102,49 @@
             <div class="skill-item">
               <p class="skill-img"><img src="img/icon_skill.png" alt=""></p>
               <div class="skill-body">
-                <h3 class="skill-name">HTML5/CSS3</h3>
+                  <h3 class="skill-name">C++</h3>
                 <p class="skill-text">
-                  テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+                  makefileを使用したログだけのRPGを制作、OpenGLを使用した図形描画を行った。</p>
               </div>
             </div>
             <div class="skill-item">
               <p class="skill-img"><img src="img/icon_skill.png" alt=""></p>
               <div class="skill-body">
-                <h3 class="skill-name">WordPress</h3>
+                <h3 class="skill-name">C#</h3>
                 <p class="skill-text">
-                  テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+                  Unityを使用した3Dアクション、シューティングゲームを制作を行った。</p>
               </div>
             </div>
             <div class="skill-item">
               <p class="skill-img"><img src="img/icon_skill.png" alt=""></p>
               <div class="skill-body">
-                <h3 class="skill-name">JavaScript</h3>
+                <h3 class="skill-name">Java</h3>
                 <p class="skill-text">
-                  テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+                  Eclipsを使用した2Dシューティングゲーム制作、AndroidStudioを使用した在庫管理アプリ制作を行った。</p>
               </div>
             </div>
             <div class="skill-item">
               <p class="skill-img"><img src="img/icon_skill.png" alt=""></p>
               <div class="skill-body">
-                <h3 class="skill-name">Photoshop</h3>
+                  <h3 class="skill-name">WordPress</h3>
                 <p class="skill-text">
-                  テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+                  既存のホームページを再現する学習方を使用し、学習した。</p>
               </div>
             </div>
             <div class="skill-item">
               <p class="skill-img"><img src="img/icon_skill.png" alt=""></p>
               <div class="skill-body">
-                <h3 class="skill-name">Illustrator</h3>
-                <p class="skill-text">
-                  テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+                  <h3 class="skill-name">Visual Basic</h3>
+                  <p class="skill-text">
+                    高校生時代、Excelを使用し、ドラクエに似たコマンド選択型RPGを制作を行った。</p>
               </div>
             </div>
             <div class="skill-item">
               <p class="skill-img"><img src="img/icon_skill.png" alt=""></p>
               <div class="skill-body">
-                <h3 class="skill-name">XD</h3>
+                <h3 class="skill-name">SQLite</h3>
                 <p class="skill-text">
-                  テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+                  Javaでの在庫管理アプリ制作時、DBの操作を実装する為に使用。</p>
               </div>
             </div>
           </div>
@@ -160,7 +162,8 @@
           <div class="contact-list">
             <a class="contact-item" href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a>
             <a class="contact-item" href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a>
-            <span class="contact-item">xxxxxx@gmail.com</span>
+            <span class="contact-item">企業の方 : yuuta.2003.2.25@icloud.com</span>
+            <span class="contact-item">一般の方 : arase210601@eggnet.ac.jp</span>
           </div>
         </div>
       </section>
