--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
   <meta property='og:type' content='website'>
-  <meta property='og:title' content='WebデザイナーTARO YAMADA ポートフォリオ'>
+  <meta property='og:title' content='プログラマー志望 荒瀬 勇太 ポートフォリオ'>
   <meta property='og:url' content='URLが入る'>
-  <meta property='og:description' content='TARO YAMADAのポートフォリオサイトです。'>
+  <meta property='og:description' content='荒瀬 勇太のポートフォリオサイトです。'>
   <meta property="og:image" content="img/ogp.png">
-  <meta name="description" content="TARO YAMADAのポートフォリオサイトです" />
+  <meta name="description" content="荒瀬 勇太のポートフォリオサイトです" />
   <title>TARO YAMADA ポートフォリオ</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -27,7 +27,7 @@
     <header class="header ">
       <div class="header-inner">
         <h1 class="header-logo">
-          <a href=".">Home</a>
+          <a href="index.html">Home</a>
         </h1>
         <nav class="header-nav">
           <ul class="header-nav-list">
