--- a/works-template.html
+++ b/works-template.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
   <meta property='og:type' content='website'>
-  <meta property='og:title' content='WebデザイナーTARO YAMADA ポートフォリオ'>
+  <meta property='og:title' content='プログラマー志望 荒瀬 勇太 ポートフォリオ'>
   <meta property='og:url' content='URLが入る'>
-  <meta property='og:description' content='TARO YAMADAのポートフォリオサイトです。'>
+  <meta property='og:description' content='荒瀬 勇太のポートフォリオサイトです。'>
   <meta property="og:image" content="img/ogp.png">
-  <meta name="description" content="TARO YAMADAのポートフォリオサイトです" />
+  <meta name="description" content="荒瀬 勇太のポートフォリオサイトです" />
   <title>TARO YAMADA ポートフォリオ</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -27,13 +27,13 @@
     <header class="header ">
       <div class="header-inner">
         <h1 class="header-logo">
-          <a href=".">TARO DESIGN</a>
+          <a href="index.html">Home</a>
         </h1>
         <nav class="header-nav">
           <ul class="header-nav-list">
-            <li class="header-nav-item"><a href="./#works">WORKS</a></li>
-            <li class="header-nav-item"><a href="./#skill">SKILL</a></li>
-            <li class="header-nav-item"><a href="./#contact">CONTACT</a></li>
+            <li class="header-nav-item"><a href="index.html#works">WORKS</a></li>
+            <li class="header-nav-item"><a href="index.html#skill">SKILL</a></li>
+            <li class="header-nav-item"><a href="index.html#contact">CONTACT</a></li>
           </ul>
         </nav>
       </div>
@@ -44,23 +44,23 @@
 
       <article class="article">
         <div class="article-inner">
-          <h2 class="article-title">DesignXYZ様</h2>
+          <h2 class="article-title">作品名</h2>
           <p class="article-img">
             <img src="img/works-sample.jpg" alt="">
           </p>
           <div class="article-body">
             <p>
-              テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります（作品について一言）
+              個人作品です。作品について
             </p>
             <h3 class="article-info-title">URL</h3>
             <p><a href="https://yahoo.co.jp" target="_blank" rel="noopener">https://yahoo.co.jp</a></p>
             <h3 class="article-info-title">担当</h3>
-            <p>デザイン・コーディング</p>
+            <p>企画、設計、開発</p>
             <h3 class="article-info-title">サイトの目的</h3>
             <p>サービスの認知と新規クライアントの獲得</p>
             <h3 class="article-info-title">ターゲット</h3>
             <p>テキストが入りますテキストが入ります</p>
-            <h3 class="article-info-title">デザインについて</h3>
+            <h3 class="article-info-title">ゲームの概要</h3>
             <p>
               テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。<br>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。
             </p>
@@ -70,7 +70,7 @@
             </p>
           </div>
           <div class="home-link">
-            <a href="./#works">Works一覧へ</a>
+            <a href="index.html#works">Works一覧へ</a>
           </div>
         </div>
       </article>
