--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   <meta property='og:description' content='荒瀬 勇太のポートフォリオサイトです。'>
   <meta property="og:image" content="img/ogp.png">
   <meta name="description" content="荒瀬 勇太のポートフォリオサイトです" />
-  <title>TARO YAMADA ポートフォリオ</title>
+  <title>荒瀬 勇太 ポートフォリオ</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined" rel="stylesheet">
   <link href="css/ress.css" media="all" rel="stylesheet" type="text/css" />
   <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="css/slider.css" media="all" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="img/favicon.ico" />
   <link rel=”canonical” href=”URLが入る” />
 </head>
@@ -24,7 +25,7 @@
   <div class="wrapper">
 
     <!-- header -->
-    <header class="header ">
+    <header class="header">
       <div class="header-inner">
         <h1 class="header-logo">
           <a href="index.html">Home</a>
@@ -43,8 +44,8 @@
     <main class="content">
 
       <!-- split -->
-      <div class="split">
-        <div class="split-body">
+      <div class="split" style= "background-color:cornflowerblue">
+        <!-- <div class="split-body" style = "background-color: blanchedalmond;">
           <p class="split-title">荒瀬勇太</p>
           <p class="split-text">
               やった人がクスっとでも笑えたら良いゲームを制作しています。<br>
@@ -54,8 +55,13 @@
               プログラミングを体験してから今年で3年目になります。<br>
               現在は、主にC#,C++,Javaを学習しています。<br>
           </p>
+        </div> -->
+        <!-- <div class="split-img"></div> -->
+        <div class="autoplay-slider">
+          <div class="slide"><img class="slideimg" src="img/slider_1.jpeg"></div>
+          <div class="slide"><img class="slideimg" src="img/slider_2.jpeg"></div>
+          <div class="slide"><img class="slideimg" src="img/slider_3.jpeg"></div>
         </div>
-        <div class="split-img"></div>
       </div>
       <!-- /split -->
 
