--- a/works-template.html
+++ b/works-template.html
@@ -9,7 +9,7 @@
   <meta property='og:description' content='荒瀬 勇太のポートフォリオサイトです。'>
   <meta property="og:image" content="img/ogp.png">
   <meta name="description" content="荒瀬 勇太のポートフォリオサイトです" />
-  <title>TARO YAMADA ポートフォリオ</title>
+  <title>荒瀬 勇太 ポートフォリオ</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
