--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
     <!-- footer -->
     <footer class="footer">
-      <div class="copyright">&copy;TARO YAMADA</div>
+      <div class="copyright">&copy;荒瀬　勇太</div>
     </footer>
     <!-- /footer -->
 
