--- a/works-increasespider.html
+++ b/works-increasespider.html
@@ -44,7 +44,7 @@
 
       <article class="article">
         <div class="article-inner">
-          <h2 class="article-title">作品名</h2>
+          <h2 class="article-title">Increase Spider</h2>
           <p class="article-img">
             <img src="img/works-sample.jpg" alt="">
           </p>
@@ -53,13 +53,9 @@
               個人作品です。作品について
             </p>
             <h3 class="article-info-title">URL</h3>
-            <p><a href="https://yahoo.co.jp" target="_blank" rel="noopener">https://yahoo.co.jp</a></p>
+            <p><a href="https://github.com/yutaarase/unity_increase-spider.git" target="_blank" rel="noopener">GitHub</a></p>
             <h3 class="article-info-title">担当</h3>
             <p>企画、設計、開発</p>
-            <h3 class="article-info-title">サイトの目的</h3>
-            <p>サービスの認知と新規クライアントの獲得</p>
-            <h3 class="article-info-title">ターゲット</h3>
-            <p>テキストが入りますテキストが入ります</p>
             <h3 class="article-info-title">ゲームの概要</h3>
             <p>
               テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。<br>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。
@@ -82,7 +78,7 @@
 
     <!-- footer -->
     <footer class="footer">
-      <div class="copyright">&copy;TARO YAMADA</div>
+      <div class="copyright">&copy;荒瀬 勇太</div>
     </footer>
     <!-- /footer -->
 
