--- a/works-shoottheinvaders.html
+++ b/works-shoottheinvaders.html
@@ -49,17 +49,18 @@
             <img src="img/works-sample.jpg" alt="">
           </p>
           <div class="article-body">
+            <h3 class="article-info-title">ゲームの概要</h3>
             <p>
-              個人作品です。作品について
+              テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。<br>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。
             </p>
             <h3 class="article-info-title">URL</h3>
             <p><a href="https://github.com/yutaarase/unity_shoot-the-invaders.git" target="_blank" rel="noopener">GitHub</a></p>
             <h3 class="article-info-title">担当</h3>
             <p>企画、設計、開発</p>
-            <h3 class="article-info-title">ゲームの概要</h3>
-            <p>
-              テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。<br>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。
-            </p>
+            <h3 class="article-info-title">開発要件</h3>
+            <p>使用ゲームエンジン : Unity Version 2021.2.2f1</p>
+            <p>開発期間 : 1ヶ月</p>
+            <p>制作期間 : 2週間</p>
             <h3 class="article-info-title">コーディングについて</h3>
             <p>
               テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。
