--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <h2 class="title">SKILL</h2>
           <div class="skill-list">
             <div class="skill-item">
-              <p class="skill-img"><img src="img/icon_skill.png" alt=""></p>
+              <p class="skill-img"><img src="img/icon/c-plusplus.png" alt=""></p>
               <div class="skill-body">
                   <h3 class="skill-name">C++</h3>
                 <p class="skill-text">
@@ -119,7 +119,7 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/icon_skill.png" alt=""></p>
+              <p class="skill-img"><img src="img/icon/c-sharp.png" alt=""></p>
               <div class="skill-body">
                 <h3 class="skill-name">C#</h3>
                 <p class="skill-text">
@@ -127,7 +127,7 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/icon_skill.png" alt=""></p>
+              <p class="skill-img"><img src="img/icon/java.png" alt=""></p>
               <div class="skill-body">
                 <h3 class="skill-name">Java</h3>
                 <p class="skill-text">
@@ -135,7 +135,7 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/icon_skill.png" alt=""></p>
+              <p class="skill-img"><img src="img/icon/wordpress.png" alt=""></p>
               <div class="skill-body">
                   <h3 class="skill-name">WordPress</h3>
                 <p class="skill-text">
@@ -143,7 +143,7 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/icon_skill.png" alt=""></p>
+              <p class="skill-img"><img src="img/icon/vb.png" alt=""></p>
               <div class="skill-body">
                   <h3 class="skill-name">Visual Basic</h3>
                   <p class="skill-text">
@@ -151,7 +151,7 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/icon_skill.png" alt=""></p>
+              <p class="skill-img"><img src="img/icon/sqlite.png" alt=""></p>
               <div class="skill-body">
                 <h3 class="skill-name">SQLite</h3>
                 <p class="skill-text">
