--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
             </a>
             <a class="works-item" href="works-shoottheinvaders.html">
               <p class="works-img"><img src="img/works-dummy-thumb.jpg" alt="" /></p>
-              <p class="works-name">作品名が入る</p>
+              <p class="works-name">Shoot The Invaders</p>
               <p class="works-info">Unity作品 3DShooting</p>
             </a>
             <a class="works-item" href="works-increasespider.html">
               <p class="works-img"><img src="img/works-dummy-thumb.jpg" alt="" /></p>
-              <p class="works-name">作品名が入る</p>
+              <p class="works-name">Increase Spider</p>
               <p class="works-info">Unity作品 3DAction</p>
             </a>
             <a class="works-item" href="works-template.html">
