--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-theme="dark">
+<html>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
@@ -43,7 +43,6 @@
                 <label for="switch"></label>
               </section>
             </li>
-            
           </ul>
         </nav>
       </div>
