--- a/works-shoottheinvaders.html
+++ b/works-shoottheinvaders.html
@@ -50,7 +50,7 @@
 
     <main class="content">
 
-      <article class="article">
+      <article class="article section">
         <div class="article-inner">
           <h2 class="article-title">Shoot The Invaders</h2>
           <p class="article-img">
@@ -59,7 +59,10 @@
           <div class="article-body">
             <h3 class="article-info-title">ゲームの概要</h3>
             <p>
-              テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。<br>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。
+              個人作成のゲームです。
+              ジャンルとしては、対陸3Dシューティングゲームです。
+              航空機を操作して敵の基地を破壊し爽快感を味わえます。
+              機体バランス操作をマウスで行わずキーボード入力で制御します。
             </p>
             
             <h3 class="article-info-title">担当</h3>
@@ -73,9 +76,12 @@
             </ul>
             <p></p>
 
-            <h3 class="article-info-title">コーディングについて</h3>
+            <h3 class="article-info-title">制作について</h3>
             <p>
-              テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。
+              個人作成のゲームで企画、設計、計画、開発を一人で行いました。
+              機関銃の着弾地点の描画にはRayCastを使用せずに実装しました。
+              Free Lookなどの視点移動を複数実装しました。
+              追尾ミサイルにはバネの挙動を利用したミサイルなど用途に合わせて２つの挙動のミサイルを制作しました。
             </p>
             
             <h3 class="article-info-title">URL</h3>
