--- a/works-increasespider.html
+++ b/works-increasespider.html
@@ -27,9 +27,9 @@
     <!-- header -->
     <header class="header">
       <div class="header-inner">
-        <h1 class="header-logo">
+        <div class="header-logo">
           <a href="index.html">Home</a>
-        </h1>
+        </div>
         <nav class="header-nav">
           <ul class="header-nav-list">
             <li class="header-nav-item"><a href="index.html#works">WORKS</a></li>
@@ -50,7 +50,7 @@
 
     <main class="content">
 
-      <article class="article">
+      <article class="article section">
         <div class="article-inner">
           <h2 class="article-title">Increase Spider</h2>
           <p class="article-img">
@@ -59,7 +59,7 @@
           <div class="article-body">
             <h3 class="article-info-title">ゲームの概要</h3>
             <p>
-              テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。<br>テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。
+              個人制作のゲームです。ジャンルとしては、3Dアクションゲームです。敵から逃げながら子供を増やしていくゲームです。 敵から追わるというスリルを味わえるゲームです。Playerが蜘蛛の視点なので個人差もありますが酔われる可能性があります。
             </p>
             
             <h3 class="article-info-title">担当</h3>
@@ -75,7 +75,7 @@
 
             <h3 class="article-info-title">コーディングについて</h3>
             <p>
-              テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。
+              個人作成のゲームで企画、設計、計画、開発を一人で行いました。糸の発射攻撃、糸を発射移動、巣を設置の3つのモードを実装しました。蜘蛛の子の群れを実装しました。蜘蛛の子の管理はListを使用する方法も考えましたが、配列を使用し実装しました。
             </p>
             <h3 class="article-info-title">URL</h3>
             <p><a href="https://github.com/yutaarase/unity_increase-spider.git" target="_blank" rel="noopener">GitHub</a></p>
