--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main class="content">
 
       <!-- split -->
-      <div class="split">
+      <div class="split section">
         <div class="split-body">
           <p class="split-title">荒瀬勇太</p>
           <p class="split-text">
@@ -83,6 +83,11 @@
         <div class="inner">
           <h2 class="title">WORKS</h2>
           <div class="works-list">
+            <a class="works-item" href="works-increasespider.html">
+              <p class="works-img"><img src="img/works-dummy-thumb.jpg" alt="" /></p>
+              <p class="works-name">Increase Spider</p>
+              <p class="works-info">Unity作品 3DAction</p>
+            </a>
             <a class="works-item" href="works-run.html">
               <p class="works-img"><img src="img/works-dummy-thumb.jpg" alt="" /></p>
               <p class="works-name">RUN!!</p>
@@ -92,11 +97,6 @@
               <p class="works-img"><img src="img/works-dummy-thumb.jpg" alt="" /></p>
               <p class="works-name">Shoot The Invaders</p>
               <p class="works-info">Unity作品 3DShooting</p>
-            </a>
-            <a class="works-item" href="works-increasespider.html">
-              <p class="works-img"><img src="img/works-dummy-thumb.jpg" alt="" /></p>
-              <p class="works-name">Increase Spider</p>
-              <p class="works-info">Unity作品 3DAction</p>
             </a>
             <a class="works-item" href="works-template.html">
               <p class="works-img"><img src="img/works-dummy-thumb.jpg" alt="" /></p>
