--- a/index.html
+++ b/index.html
@@ -89,19 +89,24 @@
               <p class="works-info">Unity作品 3DAction</p>
             </a>
             <a class="works-item" href="works-run.html">
-              <p class="works-img"><img src="img/works-dummy-thumb.jpg" alt="" /></p>
+              <p class="works-img"><img src="img/work_run.png" alt="" /></p>
               <p class="works-name">RUN!!</p>
               <p class="works-info">Unity作品 3DAction</p>
             </a>
             <a class="works-item" href="works-shoottheinvaders.html">
-              <p class="works-img"><img src="img/works-dummy-thumb.jpg" alt="" /></p>
+              <p class="works-img"><img src="img/work_shoottheinvaders.png" alt="" /></p>
               <p class="works-name">Shoot The Invaders</p>
               <p class="works-info">Unity作品 3DShooting</p>
             </a>
-            <a class="works-item" href="works-template.html">
+            <a class="works-item" href="works-foodmanagement.html">
               <p class="works-img"><img src="img/works-dummy-thumb.jpg" alt="" /></p>
-              <p class="works-name">作品名が入る</p>
-              <p class="works-info">Banner Design</p>
+              <p class="works-name">FoodManagement</p>
+              <p class="works-info">AndroidStudio作品 App</p>
+            </a>
+            <a class="works-item" href="works-grawupshooter.html">
+              <p class="works-img"><img src="img/works-dummy-thumb.jpg" alt="" /></p>
+              <p class="works-name">Graw up Shooter</p>
+              <p class="works-info">Eclipse作品 2DShooting</p>
             </a>
           </div>
         </div>
@@ -142,7 +147,7 @@
               <div class="skill-body">
                   <h3 class="skill-name">WordPress</h3>
                 <p class="skill-text">
-                  既存のホームページを再現する学習方を使用し、学習した。</p>
+                  既存のホームページを再現する学習方法を使用し、学習した。</p>
               </div>
             </div>
             <div class="skill-item">
@@ -159,6 +164,22 @@
                 <h3 class="skill-name">SQLite</h3>
                 <p class="skill-text">
                   Javaでの在庫管理アプリ制作時、DBの操作を実装する為に使用。</p>
+              </div>
+            </div>
+            <div class="skill-item">
+              <p class="skill-img"><img src="img/icon/sqlite.png" alt=""></p>
+              <div class="skill-body">
+                <h3 class="skill-name">Unity</h3>
+                <p class="skill-text">
+                  3Dアクション、シューティングゲーム制作に使用。</p>
+              </div>
+            </div>
+            <div class="skill-item">
+              <p class="skill-img"><img src="img/icon/sqlite.png" alt=""></p>
+              <div class="skill-body">
+                <h3 class="skill-name">Eclipse</h3>
+                <p class="skill-text">
+                  2Dシューティングゲーム制作に使用。</p>
               </div>
             </div>
           </div>
