--- a/works-increasespider.html
+++ b/works-increasespider.html
@@ -60,7 +60,6 @@
             <div class="article-br">
               <h3 class="article-info-title">ゲームの概要</h3>
               <ul>
-                <li>個人制作のゲームです。</li>
                 <li>ジャンルとしては、3Dアクションゲームです。</li>
                 <li>敵から逃げながら子供を増やしていくゲームです。</li>
                 <li>敵から追わるというスリルを味わえるゲームです。</li>
@@ -85,10 +84,10 @@
             <div class="article-br">
               <h3 class="article-info-title">コーディングについて</h3>
               <ul>
-                <li>個人作成のゲームで企画、設計、計画、開発を一人で行いました。</li>
-                <li>糸の発射攻撃、糸を発射移動、巣を設置の3つのモードを実装しました。</li>
-                <li>蜘蛛の子の群れを実装しました。</li>
-                <li>蜘蛛の子の管理はListを使用する方法も考えましたが、配列を使用し実装しました。</li>
+                <li>個人作成のゲームで企画、設計、計画、開発を一人で行っています。</li>
+                <li>糸の発射攻撃、糸を発射移動、巣を設置の3つのモードを実装しています。</li>
+                <li>蜘蛛の子の群れを実装しています。</li>
+                <li>蜘蛛の子の管理はListを使用する方法も考えましたが、配列を使用し実装しています。</li>
               </ul>
             </div>
             
