--- a/works-run.html
+++ b/works-run.html
@@ -54,7 +54,13 @@
         <div class="article-inner">
           <h2 class="article-title">RUN!!</h2>
           <p class="article-imgspace">
-            <img class="article-img" src="img/works-sample.jpg" alt="">
+            <iframe class="article-img"
+              src="https://www.youtube.com/embed/fcyu0xEVuZw" 
+              title="YouTube video player" 
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+              allowfullscreen>
+            </iframe>
           </p>
           <div class="article-body">
             <div class="article-br">
@@ -82,9 +88,9 @@
             <div class="article-br">
               <h3 class="article-info-title">制作について</h3>
               <ul>
-                <li>個人作成のゲームで企画、設計、計画、開発を一人で行いました。</li>
-                <li>シャトルランの音楽と進行を統括するスクリプトを全てスクラッチで制作しました。</li>
-                <li>Sceneの遷移を統括するクラスもスクラッチで制作し、前作Shoot The Invadersのクラスを更に最適化し制作しました。</li>
+                <li>個人作成のゲームで企画、設計、計画、開発を一人で行っています。</li>
+                <li>シャトルランの音楽と進行を統括するスクリプトを全てスクラッチで制作しています。</li>
+                <li>Sceneの遷移を統括するクラスもスクラッチで制作し、前作Shoot The Invadersのクラスを更に最適化し制作しています。</li>
               </ul>
             </div>
             
