--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </header>
     <!-- /header -->
 
-    <main class="content">
+    <main>
 
       <!-- split -->
       <div class="split section">
